--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -13,13 +13,11 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - SAT 01/21/2023
 
 ### () - FRI 01/20/2023
-<!-- write new post -->
-* () start post #1024 on threejs-buffer-geometry-attributes-color
+* (done) start post #1024 on threejs-buffer-geometry-attributes-color
 <!-- videoground-blog-posts -->
 * () threejs-buffer-geometry-attributes-color - video1
 
 ### () - THU 01/19/2023
-<!-- edit -->
 * (done) threejs-depth-material - proof read opening and getting started
 * (done) threejs-depth-material - update code
 * (done) worked on new template7 video2 file with updated colon object, and using r1 of curve.js
