--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -6,16 +6,53 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () update youtube github video links from threejs-ambient-light
 
 <!-------- ----------
+-- WEEK 4
+---------- --------->
+## () - WEEK 4 - SUN 01/22/2023 - SAT 01/28/2023
+
+This week I would like to focus more so on the beta world video collection first and formost. I will still want to write a new post on firday as always, but I would like to keep it with something simple. There are still many posts that I should have written on threejs at this post that I have not yet after all.
+
+### () - SAT 01/22/2023
+<!-- videoground-beta-world -->
+
+### () - FRI 01/22/2023
+<!-- write new post -->
+* () start post #1024 on threejs-examples-house-two
+<!-- videoground-beta-world -->
+
+### () - THU 01/22/2023
+<!-- videoground-beta-world -->
+
+
+### () - WED 01/22/2023
+<!-- videoground-beta-world -->
+
+
+### () - TUE 01/22/2023
+<!-- videoground-beta-world -->
+* () timer-train - 
+
+### () - MON 01/22/2023
+<!-- videoground-beta-world -->
+* () timer-train - 
+
+### () - SUN 01/22/2023
+<!-- videoground-beta-world -->
+* () timer-train - 
+
+
+<!-------- ----------
 -- WEEK 3
 ---------- --------->
 ## () - WEEK 3 - SUN 01/15/2023 - SAT 01/21/2023
 
 ### () - SAT 01/21/2023
+<!-- videoground-beta-world -->
+* () timer-train - start video2-dae.js
 
 ### () - FRI 01/20/2023
 * (done) start post #1024 on threejs-buffer-geometry-attributes-color
-<!-- videoground-blog-posts -->
-* () threejs-buffer-geometry-attributes-color - video1
+* (done) threejs-buffer-geometry-attributes-color - video1
 
 ### () - THU 01/19/2023
 * (done) threejs-depth-material - proof read opening and getting started
