--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -30,15 +30,15 @@ This week I would like to focus more so on the beta world video collection first
 
 ### () - TUE 01/22/2023
 <!-- videoground-beta-world -->
-* () timer-train - 
+* () timer-train - houses
 
 ### () - MON 01/22/2023
 <!-- videoground-beta-world -->
-* () timer-train - 
+* () timer-train - car geometry
 
 ### () - SUN 01/22/2023
 <!-- videoground-beta-world -->
-* () timer-train - 
+* () timer-train - work out path for video2
 
 
 <!-------- ----------
@@ -48,7 +48,7 @@ This week I would like to focus more so on the beta world video collection first
 
 ### () - SAT 01/21/2023
 <!-- videoground-beta-world -->
-* () timer-train - start video2-dae.js
+* (done) timer-train - start video2-dae.js
 
 ### () - FRI 01/20/2023
 * (done) start post #1024 on threejs-buffer-geometry-attributes-color
