--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -35,10 +35,13 @@ This week I would like to focus more so on the beta world video collection first
 ### () - MON 01/22/2023
 <!-- videoground-beta-world -->
 * () timer-train - car geometry
+<!-- EDIT -->
+* (done) threejs-object3d - proof read opening and getting strated section
+* () make sure I am linking to every other object3d post
+
 
 ### () - SUN 01/22/2023
-<!-- videoground-beta-world -->
-* () timer-train - work out path for video2
+* (done) timer-train - work out path for video2
 
 
 <!-------- ----------
@@ -47,7 +50,6 @@ This week I would like to focus more so on the beta world video collection first
 ## () - WEEK 3 - SUN 01/15/2023 - SAT 01/21/2023
 
 ### () - SAT 01/21/2023
-<!-- videoground-beta-world -->
 * (done) timer-train - start video2-dae.js
 
 ### () - FRI 01/20/2023
