--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -37,7 +37,9 @@ This week I would like to focus more so on the beta world video collection first
 * () timer-train - car geometry
 <!-- EDIT -->
 * (done) threejs-object3d - proof read opening and getting strated section
-* () make sure I am linking to every other object3d post
+* (done) updated code examples
+* () threejs-object3d - proof read basic section
+* () threejs-object3d - proof read and expand type section with points demo
 
 
 ### () - SUN 01/22/2023
