--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -38,8 +38,11 @@ This week I would like to focus more so on the beta world video collection first
 <!-- EDIT -->
 * (done) threejs-object3d - proof read opening and getting strated section
 * (done) updated code examples
-* () threejs-object3d - proof read basic section
-* () threejs-object3d - proof read and expand type section with points demo
+* (done) threejs-object3d - proof read basic section
+* (done) threejs-object3d - proof read and expand type section with points demo
+* (done) threejs-object3d - first basic example of get by name section
+
+* () threejs-object3d - first basic of user data section
 
 
 ### () - SUN 01/22/2023
