--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -30,19 +30,19 @@ This week I would like to focus more so on the beta world video collection first
 
 ### () - TUE 01/22/2023
 <!-- videoground-beta-world -->
+* () timer-train - car geometry
 * () timer-train - houses
+<!-- EDIT -->
+* () threejs-object3d - first basic of user data section
 
 ### () - MON 01/22/2023
-<!-- videoground-beta-world -->
-* () timer-train - car geometry
 <!-- EDIT -->
 * (done) threejs-object3d - proof read opening and getting strated section
 * (done) updated code examples
 * (done) threejs-object3d - proof read basic section
 * (done) threejs-object3d - proof read and expand type section with points demo
 * (done) threejs-object3d - first basic example of get by name section
-
-* () threejs-object3d - first basic of user data section
+* (done) threejs-object3d - first basic of user world pos section
 
 
 ### () - SUN 01/22/2023
