--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -25,15 +25,17 @@ This week I would like to focus more so on the beta world video collection first
 
 
 ### () - WED 01/22/2023
+<!-- EDIT -->
+* () threejs-object3d - first basic of user data section
 <!-- videoground-beta-world -->
 
-
 ### () - TUE 01/22/2023
+<!-- EDIT -->
+* (done) threejs-object3d - first basic of scale section
 <!-- videoground-beta-world -->
 * () timer-train - car geometry
 * () timer-train - houses
-<!-- EDIT -->
-* () threejs-object3d - first basic of user data section
+
 
 ### () - MON 01/22/2023
 <!-- EDIT -->
