--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -21,24 +21,31 @@ This week I would like to focus more so on the beta world video collection first
 <!-- videoground-beta-world -->
 
 ### () - THU 01/22/2023
+* () threejs-dae-loader - start new example that is on the updated loader
 <!-- videoground-beta-world -->
-
+* () timer-train - textures
 
 ### () - WED 01/22/2023
 <!-- EDIT -->
-* () threejs-object3d - first basic of user data section
+* () threejs-object3d-type - proof read opening and intro
+* () threejs-object3d-get-world-position - proof read opening and intro
+* () threejs-object3d-traverse - proof read opening and intro
+* () threejs-object3d-get-by-name - prrof read opening and intro
+* () threejs-object3d-visible -
+* () threejs-object3d-layers -
+* () threejs-object3d-position -
+* () threejs-object3d-lookat -
+* () threejs-object3d - first basic example of user data section
 <!-- videoground-beta-world -->
+* () timer-train - houses, train car geo
+<!-- prototype -->
+* () start a house-two r146 prototype
 
 ### () - TUE 01/22/2023
-<!-- EDIT -->
 * (done) threejs-object3d - first basic of scale section
-<!-- videoground-beta-world -->
-* () timer-train - car geometry
-* () timer-train - houses
-
+* (done) timer-train - train car geometry
 
 ### () - MON 01/22/2023
-<!-- EDIT -->
 * (done) threejs-object3d - proof read opening and getting strated section
 * (done) updated code examples
 * (done) threejs-object3d - proof read basic section
@@ -46,10 +53,8 @@ This week I would like to focus more so on the beta world video collection first
 * (done) threejs-object3d - first basic example of get by name section
 * (done) threejs-object3d - first basic of user world pos section
 
-
 ### () - SUN 01/22/2023
 * (done) timer-train - work out path for video2
-
 
 <!-------- ----------
 -- WEEK 3
