--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -27,7 +27,7 @@ This week I would like to focus more so on the beta world video collection first
 
 ### () - WED 01/22/2023
 <!-- EDIT -->
-* () threejs-object3d-type - proof read opening and intro
+* (done) threejs-object3d-type - proof read opening and intro
 * () threejs-object3d-get-world-position - proof read opening and intro
 * () threejs-object3d-traverse - proof read opening and intro
 * () threejs-object3d-get-by-name - prrof read opening and intro
