--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -35,6 +35,7 @@ This week I would like to focus more so on the beta world video collection first
 ### () - WED 01/22/2023
 <!-- EDIT -->
 * (done) threejs-object3d-type - proof read opening and intro
+* (done) threejs-object3d-type - expand post a lot as there is only one example
 * () threejs-dae-loader - start new example that is on the updated loader
 <!-- videoground-beta-world -->
 * () timer-train - houses, train car geo
