--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -30,17 +30,15 @@ This week I would like to focus more so on the beta world video collection first
 * () threejs-object3d-lookat -
 * () threejs-object3d - first basic example of user data section
 <!-- videoground-beta-world -->
+* () timer-train - houses, train car geo
 * () timer-train - textures
 
 ### () - WED 01/22/2023
 <!-- EDIT -->
 * (done) threejs-object3d-type - proof read opening and intro
 * (done) threejs-object3d-type - expand post a lot as there is only one example
-* () threejs-dae-loader - start new example that is on the updated loader
-<!-- videoground-beta-world -->
-* () timer-train - houses, train car geo
-<!-- prototype -->
-* () start a house-two r146 prototype
+* (done) threejs-dae-loader - start new example that is on the updated loader
+* (done) start a house-two r146 prototype
 
 ### () - TUE 01/22/2023
 * (done) threejs-object3d - first basic of scale section
