--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -21,7 +21,9 @@ This week I would like to focus more so on the beta world video collection first
 <!-- videoground-beta-world -->
 
 ### () - THU 01/22/2023
-* () threejs-object3d-get-world-position - proof read opening and intro
+* (done) threejs-object3d-get-world-position - proof read opening and intro
+* () threejs-object3d-get-world-position - update code examples, proof read sections
+
 * () threejs-object3d-traverse - proof read opening and intro
 * () threejs-object3d-get-by-name - prrof read opening and intro
 * () threejs-object3d-visible -
