--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -14,6 +14,13 @@ This week I would like to focus more so on the beta world video collection first
 
 ### () - SAT 01/22/2023
 <!-- videoground-beta-world -->
+* () threejs-object3d-traverse - proof read opening and intro
+* () threejs-object3d-get-by-name - prrof read opening and intro
+* () threejs-object3d-visible -
+* () threejs-object3d-layers -
+* () threejs-object3d-position -
+* () threejs-object3d-lookat -
+* () threejs-object3d - first basic example of user data section
 
 ### () - FRI 01/22/2023
 <!-- write new post -->
@@ -22,15 +29,7 @@ This week I would like to focus more so on the beta world video collection first
 
 ### () - THU 01/22/2023
 * (done) threejs-object3d-get-world-position - proof read opening and intro
-* () threejs-object3d-get-world-position - update code examples, proof read sections
-
-* () threejs-object3d-traverse - proof read opening and intro
-* () threejs-object3d-get-by-name - prrof read opening and intro
-* () threejs-object3d-visible -
-* () threejs-object3d-layers -
-* () threejs-object3d-position -
-* () threejs-object3d-lookat -
-* () threejs-object3d - first basic example of user data section
+* (done) threejs-object3d-get-world-position - update code examples, proof read sections
 <!-- videoground-beta-world -->
 * () timer-train - houses, train car geo
 * () timer-train - textures
