--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -23,16 +23,21 @@ This week I would like to focus more so on the beta world video collection first
 * () threejs-object3d - first basic example of user data section
 
 ### () - FRI 01/22/2023
+<!-- test_threejs -->
+* () for post: threejs-examples-house-two - start the for post folder
 <!-- write new post -->
 * () start post #1024 on threejs-examples-house-two
+<!-- videoground-blog-posts -->
+* () threejs-examples-house-two - video1
 <!-- videoground-beta-world -->
+* () timer-train - houses
+* () timer-train - textures
 
 ### () - THU 01/22/2023
 * (done) threejs-object3d-get-world-position - proof read opening and intro
 * (done) threejs-object3d-get-world-position - update code examples, proof read sections
 <!-- videoground-beta-world -->
-* () timer-train - houses, train car geo
-* () timer-train - textures
+* (done) timer-train - train car geo
 
 ### () - WED 01/22/2023
 <!-- EDIT -->
