--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -27,6 +27,8 @@ This week I would like to focus more so on the beta world video collection first
 * () for post: threejs-examples-house-two - start the for post folder
 <!-- write new post -->
 * () start post #1024 on threejs-examples-house-two
+<!-- edit -->
+* () threejs-dae-collada-loader - write about module and demo
 <!-- videoground-blog-posts -->
 * () threejs-examples-house-two - video1
 <!-- videoground-beta-world -->
