--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -13,7 +13,10 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 This week I would like to focus more so on the beta world video collection first and formost. I will still want to write a new post on firday as always, but I would like to keep it with something simple. There are still many posts that I should have written on threejs at this post that I have not yet after all.
 
 ### () - SAT 01/22/2023
-<!-- videoground-beta-world -->
+<!-- EDIT -->
+* () threejs-examples-house-two
+
+<!-- EDIT MORE? -->
 * () threejs-object3d-traverse - proof read opening and intro
 * () threejs-object3d-get-by-name - prrof read opening and intro
 * () threejs-object3d-visible -
@@ -22,11 +25,12 @@ This week I would like to focus more so on the beta world video collection first
 * () threejs-object3d-lookat -
 * () threejs-object3d - first basic example of user data section
 
+
+<!-- videoground-beta-world -->
+
 ### () - FRI 01/22/2023
-<!-- test_threejs -->
-* () for post: threejs-examples-house-two - start the for post folder
-<!-- write new post -->
-* () start post #1025 on threejs-examples-house-two
+* (done) for post: threejs-examples-house-two - start the for post folder
+* (done) start post #1025 on threejs-examples-house-two
 <!-- edit -->
 * () threejs-dae-collada-loader - write about module and demo
 <!-- videoground-blog-posts -->
