--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -31,8 +31,9 @@ This week I would like to focus more so on the beta world video collection first
 ### () - FRI 01/22/2023
 * (done) for post: threejs-examples-house-two - start the for post folder
 * (done) start post #1025 on threejs-examples-house-two
+* (done) edit: threejs-dae-collada-loader - write about module and demo
 <!-- edit -->
-* () threejs-dae-collada-loader - write about module and demo
+* () edit: threejs-examples - link to new threejs-examples-house-two post
 <!-- videoground-blog-posts -->
 * () threejs-examples-house-two - video1
 <!-- videoground-beta-world -->
