--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -27,15 +27,13 @@ This week I would like to focus more so on the beta world video collection first
 
 
 <!-- videoground-beta-world -->
-
 ### () - FRI 01/22/2023
 * (done) for post: threejs-examples-house-two - start the for post folder
 * (done) start post #1025 on threejs-examples-house-two
 * (done) edit: threejs-dae-collada-loader - write about module and demo
-<!-- edit -->
-* () edit: threejs-examples - link to new threejs-examples-house-two post
+* (done) edit: threejs-examples - link to new threejs-examples-house-two post
 <!-- videoground-blog-posts -->
-* () threejs-examples-house-two - video1
+* () threejs-examples-house-two - video1 for the post
 <!-- videoground-beta-world -->
 * () timer-train - houses
 * () timer-train - textures
