--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -14,8 +14,8 @@ This week I would like to focus more so on the beta world video collection first
 
 ### () - SAT 01/22/2023
 <!-- EDIT -->
-* () threejs-examples-house-two
-
+* () threejs-examples-house-two - expand on the examples a little
+* () threejs-examples-house - link to house two post, write about it in the post, also embed video 1 as well
 <!-- EDIT MORE? -->
 * () threejs-object3d-traverse - proof read opening and intro
 * () threejs-object3d-get-by-name - prrof read opening and intro
