--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -6,6 +6,21 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () update youtube github video links from threejs-ambient-light
 
 <!-------- ----------
+-- WEEK 5
+---------- --------->
+## () - WEEK 5 - SUN 01/29/2023 - TUE 01/31/2023
+
+
+<!-- EDIT MORE? -->
+* () threejs-object3d-traverse - proof read opening and intro
+* () threejs-object3d-get-by-name - prrof read opening and intro
+* () threejs-object3d-visible -
+* () threejs-object3d-layers -
+* () threejs-object3d-position -
+* () threejs-object3d-lookat -
+* () threejs-object3d - first basic example of user data section
+
+<!-------- ----------
 -- WEEK 4
 ---------- --------->
 ## () - WEEK 4 - SUN 01/22/2023 - SAT 01/28/2023
@@ -16,15 +31,11 @@ This week I would like to focus more so on the beta world video collection first
 <!-- EDIT -->
 * () threejs-examples-house-two - expand on the examples a little
 * () threejs-examples-house - link to house two post, write about it in the post, also embed video 1 as well
-<!-- EDIT MORE? -->
-* () threejs-object3d-traverse - proof read opening and intro
-* () threejs-object3d-get-by-name - prrof read opening and intro
-* () threejs-object3d-visible -
-* () threejs-object3d-layers -
-* () threejs-object3d-position -
-* () threejs-object3d-lookat -
-* () threejs-object3d - first basic example of user data section
-
+<!-- videoground-blog-posts -->
+* () threejs-examples-house-two - video1 for the post
+<!-- videoground-beta-world -->
+* () timer-train - houses
+* () timer-train - textures
 
 <!-- videoground-beta-world -->
 ### () - FRI 01/22/2023
@@ -32,16 +43,10 @@ This week I would like to focus more so on the beta world video collection first
 * (done) start post #1025 on threejs-examples-house-two
 * (done) edit: threejs-dae-collada-loader - write about module and demo
 * (done) edit: threejs-examples - link to new threejs-examples-house-two post
-<!-- videoground-blog-posts -->
-* () threejs-examples-house-two - video1 for the post
-<!-- videoground-beta-world -->
-* () timer-train - houses
-* () timer-train - textures
 
 ### () - THU 01/22/2023
 * (done) threejs-object3d-get-world-position - proof read opening and intro
 * (done) threejs-object3d-get-world-position - update code examples, proof read sections
-<!-- videoground-beta-world -->
 * (done) timer-train - train car geo
 
 ### () - WED 01/22/2023
