--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -29,10 +29,9 @@ This week I would like to focus more so on the beta world video collection first
 
 ### () - SAT 01/22/2023
 <!-- EDIT -->
+* (done) threejs-examples-house - link to house two post, write about it in the post, also embed video 1 as well
+* (done) threejs-examples-house-two - video1 for the post
 * () threejs-examples-house-two - expand on the examples a little
-* () threejs-examples-house - link to house two post, write about it in the post, also embed video 1 as well
-<!-- videoground-blog-posts -->
-* () threejs-examples-house-two - video1 for the post
 <!-- videoground-beta-world -->
 * () timer-train - houses
 * () timer-train - textures
