--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -20,6 +20,23 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () threejs-object3d-lookat -
 * () threejs-object3d - first basic example of user data section
 
+### () - TUE 01/31/2023
+<!-- Beta World Videos -->
+* () videoground-beta-world - uv map and textures for tree object in landscape dae file
+* () videoground-beta-world - house object for landscape dae file
+
+### () - MON 01/30/2023
+<!-- Beta World Videos -->
+* () videoground-beta-world - uv maps for train dae objects
+* () videoground-beta-world - textures for train dae objects
+
+### () - SUN 01/29/2023
+<!-- Beta World Videos -->
+* () videoground-beta-world - start a skins folder for trainset dae folder
+* () videoground-beta-world - have a skin for land dae file
+* () videoground-beta-world - new geo for engine in train dae file
+* () videoground-beta-world - new geo for passenger car in train dae file
+
 <!-------- ----------
 -- WEEK 4
 ---------- --------->
@@ -28,13 +45,10 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 This week I would like to focus more so on the beta world video collection first and formost. I will still want to write a new post on firday as always, but I would like to keep it with something simple. There are still many posts that I should have written on threejs at this post that I have not yet after all.
 
 ### () - SAT 01/22/2023
-<!-- EDIT -->
 * (done) threejs-examples-house - link to house two post, write about it in the post, also embed video 1 as well
 * (done) threejs-examples-house-two - video1 for the post
-* () threejs-examples-house-two - expand on the examples a little
-<!-- videoground-beta-world -->
-* () timer-train - houses
-* () timer-train - textures
+* (done) threejs-examples-house-two - expand on the examples a little
+* (done) videoground-beta-world - worked on new uv map for land dae file
 
 <!-- videoground-beta-world -->
 ### () - FRI 01/22/2023
