--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -22,20 +22,22 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 
 ### () - TUE 01/31/2023
 <!-- Beta World Videos -->
-* () videoground-beta-world - uv map and textures for tree object in landscape dae file
-* () videoground-beta-world - house object for landscape dae file
 
 ### () - MON 01/30/2023
 <!-- Beta World Videos -->
-* () videoground-beta-world - uv maps for train dae objects
-* () videoground-beta-world - textures for train dae objects
+
 
 ### () - SUN 01/29/2023
 <!-- Beta World Videos -->
-* () videoground-beta-world - start a skins folder for trainset dae folder
-* () videoground-beta-world - have a skin for land dae file
+* (done) videoground-beta-world - start a skins folder for trainset dae folder
+* (done) videoground-beta-world - have a skin-solid for land dae file
 * () videoground-beta-world - new geo for engine in train dae file
 * () videoground-beta-world - new geo for passenger car in train dae file
+* () videoground-beta-world - uv maps for train dae objects
+* () videoground-beta-world - solid-skin for train dae objects
+* () videoground-beta-world - uv map and textures for tree object in landscape dae file
+* () videoground-beta-world - house object for landscape dae file
+* () videoground-beta-world - solid skin for landscape dae file
 
 <!-------- ----------
 -- WEEK 4
