--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -12,7 +12,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 
 
 <!-- EDIT MORE? -->
-* () threejs-object3d-traverse - proof read opening and intro
+
 * () threejs-object3d-get-by-name - prrof read opening and intro
 * () threejs-object3d-visible -
 * () threejs-object3d-layers -
@@ -24,13 +24,11 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 <!-- Beta World Videos -->
 
 ### () - MON 01/30/2023
+<!-- EDIT -->
+* () threejs-object3d-traverse - proof read opening and intro
+<!-- PROTO -->
+* () look into what new prototype to start this week
 <!-- Beta World Videos -->
-
-
-### () - SUN 01/29/2023
-<!-- Beta World Videos -->
-* (done) videoground-beta-world - start a skins folder for trainset dae folder
-* (done) videoground-beta-world - have a skin-solid for land dae file
 * () videoground-beta-world - new geo for engine in train dae file
 * () videoground-beta-world - new geo for passenger car in train dae file
 * () videoground-beta-world - uv maps for train dae objects
@@ -38,6 +36,12 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () videoground-beta-world - uv map and textures for tree object in landscape dae file
 * () videoground-beta-world - house object for landscape dae file
 * () videoground-beta-world - solid skin for landscape dae file
+
+### () - SUN 01/29/2023
+<!-- Beta World Videos -->
+* (done) videoground-beta-world - start a skins folder for trainset dae folder
+* (done) videoground-beta-world - have a skin-solid for land dae file
+
 
 <!-------- ----------
 -- WEEK 4
