--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -24,10 +24,12 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 <!-- Beta World Videos -->
 
 ### () - MON 01/30/2023
+<!-- for post -->
+* () edit: threejs-object3d-traverse - update code
 <!-- EDIT -->
-* () threejs-object3d-traverse - proof read opening and intro
+* () edit: threejs-object3d-traverse - proof read opening and intro
 <!-- PROTO -->
-* () look into what new prototype to start this week
+* () demo: look into what new prototype to start this week
 <!-- Beta World Videos -->
 * () videoground-beta-world - new geo for engine in train dae file
 * () videoground-beta-world - new geo for passenger car in train dae file
