--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -24,10 +24,8 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 <!-- Beta World Videos -->
 
 ### () - MON 01/30/2023
-<!-- for post -->
-* () edit: threejs-object3d-traverse - update code
-<!-- EDIT -->
-* () edit: threejs-object3d-traverse - proof read opening and intro
+* (done) edit: threejs-object3d-traverse - update code
+* (done) edit: threejs-object3d-traverse - proof read opening and intro
 <!-- PROTO -->
 * () demo: look into what new prototype to start this week
 <!-- Beta World Videos -->
