--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -21,9 +21,16 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () threejs-object3d - first basic example of user data section
 
 ### () - TUE 01/31/2023
+<!-- Edit -->
+* () edit: threejs-buffer-geometry-compute-vertex-normals - proof read
+
 <!-- ForPost -->
 * () forpost: start new threejs-buffergeometry-morph-attributes base on current r146 demos
 <!-- Beta World Videos -->
+* () videoground-beta-world - new geo for passenger car in train dae file
+* () videoground-beta-world - uv maps for train dae objects
+* () videoground-beta-world - solid-skin for train dae objects
+
 * () videoground-beta-world - uv map and textures for tree object in landscape dae file
 * () videoground-beta-world - house object for landscape dae file
 * () videoground-beta-world - solid skin for landscape dae file
@@ -32,10 +39,6 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) edit: threejs-object3d-traverse - update code
 * (done) edit: threejs-object3d-traverse - proof read opening and intro
 * (done) demo: look into what new prototype to start this week
-<!-- Beta World Videos -->
-* () videoground-beta-world - new geo for passenger car in train dae file
-* () videoground-beta-world - uv maps for train dae objects
-* () videoground-beta-world - solid-skin for train dae objects
 
 ### () - SUN 01/29/2023
 <!-- Beta World Videos -->
