--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -21,11 +21,12 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () threejs-object3d - first basic example of user data section
 
 ### () - TUE 01/31/2023
-<!-- Edit -->
-* () edit: threejs-buffer-geometry-compute-vertex-normals - proof read
-
+* (done) edit: threejs-buffer-geometry-compute-vertex-normals - proof read
 <!-- ForPost -->
+* () forpost: threejs-buffer-geometry-compute-vertex-normals - update code examples
 * () forpost: start new threejs-buffergeometry-morph-attributes base on current r146 demos
+<!-- Edit -->
+
 <!-- Beta World Videos -->
 * () videoground-beta-world - new geo for passenger car in train dae file
 * () videoground-beta-world - uv maps for train dae objects
