--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -23,10 +23,11 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - TUE 01/31/2023
 * (done) edit: threejs-buffer-geometry-compute-vertex-normals - proof read
 <!-- ForPost -->
-* () forpost: threejs-buffer-geometry-compute-vertex-normals - update code examples
+* (done) forpost: threejs-buffer-geometry-compute-vertex-normals - update code examples
+* () forpost: threejs-buffer-geometry-compute-vertex-normals - new basic example
 * () forpost: start new threejs-buffergeometry-morph-attributes base on current r146 demos
 <!-- Edit -->
-
+* () edit: threejs-buffer-geometry-compute-vertex-normals - write about new basic example
 <!-- Beta World Videos -->
 * () videoground-beta-world - new geo for passenger car in train dae file
 * () videoground-beta-world - uv maps for train dae objects
