--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -25,8 +25,6 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) forpost: threejs-buffer-geometry-compute-vertex-normals - update code examples
 * (done) forpost: threejs-buffer-geometry-compute-vertex-normals - new basic example
 * (done) edit: threejs-buffer-geometry-compute-vertex-normals - write about new basic example
-<!-- ForPost -->
-* () forpost: start new threejs-buffergeometry-morph-attributes base on current r146 demos
 <!-- Beta World Videos -->
 * () videoground-beta-world - new geo for passenger car in train dae file
 * () videoground-beta-world - uv maps for train dae objects
@@ -40,6 +38,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) edit: threejs-object3d-traverse - update code
 * (done) edit: threejs-object3d-traverse - proof read opening and intro
 * (done) demo: look into what new prototype to start this week
+* (done) forpost: start new threejs-buffergeometry-morph-attributes base on current r146 demos
 
 ### () - SUN 01/29/2023
 <!-- Beta World Videos -->
