--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -10,29 +10,14 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ---------- --------->
 ## () - WEEK 5 - SUN 01/29/2023 - TUE 01/31/2023
 
-
-<!-- EDIT MORE? -->
-
-* () threejs-object3d-get-by-name - prrof read opening and intro
-* () threejs-object3d-visible -
-* () threejs-object3d-layers -
-* () threejs-object3d-position -
-* () threejs-object3d-lookat -
-* () threejs-object3d - first basic example of user data section
-
 ### () - TUE 01/31/2023
 * (done) edit: threejs-buffer-geometry-compute-vertex-normals - proof read
 * (done) forpost: threejs-buffer-geometry-compute-vertex-normals - update code examples
 * (done) forpost: threejs-buffer-geometry-compute-vertex-normals - new basic example
 * (done) edit: threejs-buffer-geometry-compute-vertex-normals - write about new basic example
-<!-- Beta World Videos -->
-* () videoground-beta-world - new geo for passenger car in train dae file
-* () videoground-beta-world - uv maps for train dae objects
-* () videoground-beta-world - solid-skin for train dae objects
-
-* () videoground-beta-world - uv map and textures for tree object in landscape dae file
-* () videoground-beta-world - house object for landscape dae file
-* () videoground-beta-world - solid skin for landscape dae file
+* (done) videoground-beta-world - uv map and textures for tree object in landscape dae file
+* (done) videoground-beta-world - house object for landscape dae file
+* (done) videoground-beta-world - solid skin for landscape dae file
 
 ### () - MON 01/30/2023
 * (done) edit: threejs-object3d-traverse - update code
@@ -41,7 +26,6 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) forpost: start new threejs-buffergeometry-morph-attributes base on current r146 demos
 
 ### () - SUN 01/29/2023
-<!-- Beta World Videos -->
 * (done) videoground-beta-world - start a skins folder for trainset dae folder
 * (done) videoground-beta-world - have a skin-solid for land dae file
 * (done) videoground-beta-world - new geo for engine in train dae file
