--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -18,7 +18,16 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - THU 02/02/2023
 
 ### () - WED 02/01/2023
-<!-- Beta World Videos -->
+<!-- FORPOST -->
+* () forpost: threejs-userdata - update examples
+* () forpost: threejs-userdata - new video demo
+<!-- videoground-blog-posts -->
+* () videoground-blog-posts: video2 for threejs-userdata
+<!-- EDIT -->
+* () edit: threejs-userdata - proof read
+* () edit: threejs-userdata - write about new example
+* () edit: threejs-userdata - embed video2
+<!-- videoground-beta-world -->
 * () videoground-beta-world - new geo for passenger car in train dae file
 * () videoground-beta-world - uv maps for train dae objects
 * () videoground-beta-world - solid-skin for train dae objects
