--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -21,11 +21,10 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) forpost: threejs-userdata - update examples
 * (done) forpost: threejs-userdata - new video demo
 * (done) edit: threejs-userdata - write about new example
-<!-- videoground-blog-posts -->
-* () videoground-blog-posts: video2 for threejs-userdata
+* (done) videoground-blog-posts: video2 for threejs-userdata
+* (done) edit: threejs-userdata - embed video2
 <!-- EDIT -->
 * () edit: threejs-userdata - proof read
-* () edit: threejs-userdata - embed video2
 <!-- videoground-beta-world -->
 * () videoground-beta-world - new geo for passenger car in train dae file
 * () videoground-beta-world - uv maps for train dae objects
