--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -23,8 +23,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) edit: threejs-userdata - write about new example
 * (done) videoground-blog-posts: video2 for threejs-userdata
 * (done) edit: threejs-userdata - embed video2
-<!-- EDIT -->
-* () edit: threejs-userdata - proof read
+* (done) edit: threejs-userdata - proof read
 <!-- videoground-beta-world -->
 * () videoground-beta-world - new geo for passenger car in train dae file
 * () videoground-beta-world - uv maps for train dae objects
