--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -16,6 +16,13 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () start post #1026 on threejs-buffer-geometry-morph-attributes
 
 ### () - THU 02/02/2023
+* () edit: threejs-examples-lines-deterministic - proof read
+* () forpost: threejs-examples-lines-deterministic - update source code
+* () videoground-blog-posts: threejs-examples-lines-deterministic - finish video1
+* () edit: threejs-examples-lines-deterministic - update source code sections
+* () edit: threejs-examples-lines-deterministic - embed video 1
+* () videoground-beta-world - solid-skin for train dae objects
+* () forpost: threejs-buffer-geometry-morph-attributes - work on new demo
 
 ### () - WED 02/01/2023
 * (done) forpost: threejs-userdata - update examples
@@ -24,7 +31,5 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) videoground-blog-posts: video2 for threejs-userdata
 * (done) edit: threejs-userdata - embed video2
 * (done) edit: threejs-userdata - proof read
-<!-- videoground-beta-world -->
-* () videoground-beta-world - new geo for passenger car in train dae file
-* () videoground-beta-world - uv maps for train dae objects
-* () videoground-beta-world - solid-skin for train dae objects
+* (done) videoground-beta-world - new geo for passenger car in train dae file
+* (done) videoground-beta-world - uv maps for train dae objects
