--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -16,12 +16,17 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () start post #1026 on threejs-buffer-geometry-morph-attributes
 
 ### () - THU 02/02/2023
-* () edit: threejs-examples-lines-deterministic - proof read
+* (done) edit: threejs-examples-lines-deterministic - proof read opening and getting started
+* (done) edit: threejs-examples-lines-deterministic - proof read conclusion
+
 * () forpost: threejs-examples-lines-deterministic - update source code
-* () videoground-blog-posts: threejs-examples-lines-deterministic - finish video1
 * () edit: threejs-examples-lines-deterministic - update source code sections
+
+* () videoground-blog-posts: threejs-examples-lines-deterministic - finish video1
 * () edit: threejs-examples-lines-deterministic - embed video 1
+
 * () videoground-beta-world - solid-skin for train dae objects
+
 * () forpost: threejs-buffer-geometry-morph-attributes - work on new demo
 
 ### () - WED 02/01/2023
