--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -18,9 +18,8 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - THU 02/02/2023
 * (done) edit: threejs-examples-lines-deterministic - proof read opening and getting started
 * (done) edit: threejs-examples-lines-deterministic - proof read conclusion
-
-* () forpost: threejs-examples-lines-deterministic - update source code
-* () edit: threejs-examples-lines-deterministic - update source code sections
+* (done) forpost: threejs-examples-lines-deterministic - update source code
+* (done) edit: threejs-examples-lines-deterministic - update source code sections
 
 * () videoground-blog-posts: threejs-examples-lines-deterministic - finish video1
 * () edit: threejs-examples-lines-deterministic - embed video 1
