--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -21,8 +21,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) forpost: threejs-examples-lines-deterministic - update source code
 * (done) edit: threejs-examples-lines-deterministic - update source code sections
 * (done) videoground-blog-posts: threejs-examples-lines-deterministic - finish video1
-
-* () edit: threejs-examples-lines-deterministic - embed video 1
+* (done) edit: threejs-examples-lines-deterministic - embed video 1
 
 * () videoground-beta-world - solid-skin for train dae objects
 
