--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -22,8 +22,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) edit: threejs-examples-lines-deterministic - update source code sections
 * (done) videoground-blog-posts: threejs-examples-lines-deterministic - finish video1
 * (done) edit: threejs-examples-lines-deterministic - embed video 1
-
-* () videoground-beta-world - solid-skin for train dae objects
+* (done) videoground-beta-world - solid-skin for train dae objects
 
 * () forpost: threejs-buffer-geometry-morph-attributes - work on new demo
 
