--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -14,6 +14,8 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 
 ### () - FRI 02/03/2023
 * () start post #1026 on threejs-buffer-geometry-morph-attributes
+<!-- -->
+* () videoground-beta-world: start new skin for land where I have tracks, grass, sand, ect
 
 ### () - THU 02/02/2023
 * (done) edit: threejs-examples-lines-deterministic - proof read opening and getting started
@@ -23,8 +25,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) videoground-blog-posts: threejs-examples-lines-deterministic - finish video1
 * (done) edit: threejs-examples-lines-deterministic - embed video 1
 * (done) videoground-beta-world - solid-skin for train dae objects
-
-* () forpost: threejs-buffer-geometry-morph-attributes - work on new demo
+* (done) forpost: threejs-buffer-geometry-morph-attributes - work on new demo
 
 ### () - WED 02/01/2023
 * (done) forpost: threejs-userdata - update examples
