--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -13,8 +13,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - SAT 02/04/2023
 
 ### () - FRI 02/03/2023
-* () start post #1026 on threejs-buffer-geometry-morph-attributes
-<!-- -->
+* (done) start post #1026 on threejs-buffer-geometry-morph-attributes
 * () videoground-beta-world: start new skin for land where I have tracks, grass, sand, ect
 
 ### () - THU 02/02/2023
