--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -11,10 +11,11 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ## () - WEEK 1 - WED 02/01/2023 - SAT 02/04/2023
 
 ### () - SAT 02/04/2023
+* () videoground-beta-world: more work on detail skin
 
 ### () - FRI 02/03/2023
 * (done) start post #1026 on threejs-buffer-geometry-morph-attributes
-* () videoground-beta-world: start new skin for land where I have tracks, grass, sand, ect
+* (done) videoground-beta-world: start new skin for land where I have tracks, grass, sand, ect
 
 ### () - THU 02/02/2023
 * (done) edit: threejs-examples-lines-deterministic - proof read opening and getting started
