--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -11,7 +11,12 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ## () - WEEK 1 - WED 02/01/2023 - SAT 02/04/2023
 
 ### () - SAT 02/04/2023
-* () videoground-beta-world: more work on detail skin
+* (done) videoground-beta-world: timer-train - grass texture with land-1-detial skin
+* () videoground-beta-world: timer-train - railrode ties in land-1-detail skin
+* () videoground-beta-world: timer-train - detail skin for train 1, just have some texture for car 0
+
+* () videoground-beta-world: timer-train - rgb noise tetxure for dirt areas
+* () videoground-beta-world: timer-train - rgb noise tetxure for sand areas
 
 ### () - FRI 02/03/2023
 * (done) start post #1026 on threejs-buffer-geometry-morph-attributes
