--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -12,11 +12,12 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 
 ### () - SAT 02/04/2023
 * (done) videoground-beta-world: timer-train - grass texture with land-1-detial skin
-* () videoground-beta-world: timer-train - railrode ties in land-1-detail skin
-* () videoground-beta-world: timer-train - detail skin for train 1, just have some texture for car 0
+* (done) videoground-beta-world: new depth-256 skin for count down basic DAE files
 
-* () videoground-beta-world: timer-train - rgb noise tetxure for dirt areas
-* () videoground-beta-world: timer-train - rgb noise tetxure for sand areas
+* () videoground-beta-world: timer-train - railroad ties in land-1-detail skin
+* () videoground-beta-world: timer-train - detail skin for train 1, just have some texture for car 0
+* () videoground-beta-world: timer-train - rgb noise texture for dirt areas
+* () videoground-beta-world: timer-train - rgb noise texture for sand areas
 
 ### () - FRI 02/03/2023
 * (done) start post #1026 on threejs-buffer-geometry-morph-attributes
