--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -15,8 +15,9 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) videoground-beta-world: new depth-256 skin for count down basic DAE files
 * (done) videoground-beta-world: timer-train - rgb noise texture for sand areas
 * (done) videoground-beta-world: timer-train - rgb noise texture for dirt areas
+* (done) videoground-beta-world: timer-train - railroad ties in land-1-detail skin started
 
-* () videoground-beta-world: timer-train - railroad ties in land-1-detail skin
+* () videoground-beta-world: finish ties in tunnel
 * () videoground-beta-world: timer-train - detail skin for train 1, just have some texture for car 0
 
 ### () - FRI 02/03/2023
