--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -5,6 +5,28 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ## YOUTUBE
 * () update youtube github video links from threejs-ambient-light
 
+
+<!-------- ----------
+-- WEEK 2
+---------- --------->
+## () - WEEK 2 - SUN 02/05/2023 - SAT 02/11/2023
+
+### () - SAT 02/11/2023
+
+### () - FRI 02/10/2023
+
+### () - THU 02/09/2023
+
+### () - WED 02/08/2023
+
+### () - TUE 02/07/2023
+
+### () - MON 02/06/2023
+
+### () - SUN 02/05/2023
+* () videoground-beta-world: finish ties in tunnel
+* () videoground-beta-world: timer-train - detail skin for train 1, just have some texture for car 0
+
 <!-------- ----------
 -- WEEK 1
 ---------- --------->
@@ -16,9 +38,6 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) videoground-beta-world: timer-train - rgb noise texture for sand areas
 * (done) videoground-beta-world: timer-train - rgb noise texture for dirt areas
 * (done) videoground-beta-world: timer-train - railroad ties in land-1-detail skin started
-
-* () videoground-beta-world: finish ties in tunnel
-* () videoground-beta-world: timer-train - detail skin for train 1, just have some texture for car 0
 
 ### () - FRI 02/03/2023
 * (done) start post #1026 on threejs-buffer-geometry-morph-attributes
