--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -24,7 +24,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - MON 02/06/2023
 
 ### () - SUN 02/05/2023
-* () videoground-beta-world: finish ties in tunnel
+* (done) videoground-beta-world: finish ties in tunnel
 * () videoground-beta-world: timer-train - detail skin for train 1, just have some texture for car 0
 
 <!-------- ----------
