--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -20,12 +20,15 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - WED 02/08/2023
 
 ### () - TUE 02/07/2023
+* () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
+* () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
 
 ### () - MON 02/06/2023
+* () videoground-beta-world: timer-train - start detail skin of landscape DAE file
 
 ### () - SUN 02/05/2023
 * (done) videoground-beta-world: finish ties in tunnel
-* () videoground-beta-world: timer-train - detail skin for train 1, just have some texture for car 0
+* (done) videoground-beta-world: timer-train - detail skin for train 1, just have some texture for car 0
 
 <!-------- ----------
 -- WEEK 1
