--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -24,6 +24,15 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
 
 ### () - MON 02/06/2023
+* () forpost: threejs-examples-lerp-geo - start lerp-geo-r1.js
+* () edit: threejs-examples-lerp-geo - proof read
+* () edit: threejs-examples-lerp-geo - update to 146 style
+
+
+* () edit: threejs-examples-weird-face-one - proof read
+* () edit: threejs-examples-weird-face-one - update code to 146 style
+
+
 * () videoground-beta-world: timer-train - start detail skin of landscape DAE file
 
 ### () - SUN 02/05/2023
