--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -20,18 +20,23 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - WED 02/08/2023
 
 ### () - TUE 02/07/2023
+* () edit: threejs-examples-weird-face-one - proof read
+* () edit: threejs-examples-weird-face-one - update code to 146 style
+
 * () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
 * () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
 
 ### () - MON 02/06/2023
 * () forpost: threejs-examples-lerp-geo - start lerp-geo-r1.js
+* () forpost: threejs-examples-lerp-geo - update to 146 style
+
+* () videoground-blog-posts: video1 for threejs-buffer-geometry-morph-attributes
+
+* () edit: threejs-buffer-geometry-morph-attributes - embed video1
+* () edit: threejs-buffer-geometry - link to new threejs-buffer-geometry-morph-attributes
 * () edit: threejs-examples-lerp-geo - proof read
-* () edit: threejs-examples-lerp-geo - update to 146 style
 
-
-* () edit: threejs-examples-weird-face-one - proof read
-* () edit: threejs-examples-weird-face-one - update code to 146 style
-
+* () build and publish
 
 * () videoground-beta-world: timer-train - start detail skin of landscape DAE file
 
