--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -27,8 +27,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
 
 ### () - MON 02/06/2023
-* () forpost: threejs-examples-lerp-geo - start lerp-geo-r1.js
-* () forpost: threejs-examples-lerp-geo - update to 146 style
+* (done) forpost: threejs-examples-lerp-geo - start lerp-geo-r1.js
 
 * () videoground-blog-posts: video1 for threejs-buffer-geometry-morph-attributes
 
