--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -28,10 +28,9 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 
 ### () - MON 02/06/2023
 * (done) forpost: threejs-examples-lerp-geo - start lerp-geo-r1.js
+* (done) videoground-blog-posts: video1 for threejs-buffer-geometry-morph-attributes
+* (done) edit: threejs-buffer-geometry-morph-attributes - embed video1
 
-* () videoground-blog-posts: video1 for threejs-buffer-geometry-morph-attributes
-
-* () edit: threejs-buffer-geometry-morph-attributes - embed video1
 * () edit: threejs-buffer-geometry - link to new threejs-buffer-geometry-morph-attributes
 * () edit: threejs-examples-lerp-geo - proof read
 
