--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -26,15 +26,18 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
 * () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
 
+* () build and publish
+
 ### () - MON 02/06/2023
 * (done) forpost: threejs-examples-lerp-geo - start lerp-geo-r1.js
 * (done) videoground-blog-posts: video1 for threejs-buffer-geometry-morph-attributes
 * (done) edit: threejs-buffer-geometry-morph-attributes - embed video1
+* (done) edit: threejs-buffer-geometry - link to new threejs-buffer-geometry-morph-attributes
 
-* () edit: threejs-buffer-geometry - link to new threejs-buffer-geometry-morph-attributes
-* () edit: threejs-examples-lerp-geo - proof read
+* () edit: threejs-examples-lerp-geo - write about new r1 and demo of r1
+* () edit: threejs-examples-lerp-geo - proof read opening and getting started
 
-* () build and publish
+
 
 * () videoground-beta-world: timer-train - start detail skin of landscape DAE file
 
