--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -34,6 +34,9 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) edit: threejs-buffer-geometry-morph-attributes - embed video1
 * (done) edit: threejs-buffer-geometry - link to new threejs-buffer-geometry-morph-attributes
 
+* () forpost: threejs-buffer-geometry - start section folders for morph attributes with at least a basic example
+* () edit: threejs-buffer-geometry - write about new morph attribute example
+
 * () edit: threejs-examples-lerp-geo - write about new r1 and demo of r1
 * () edit: threejs-examples-lerp-geo - proof read opening and getting started
 
