--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -35,11 +35,8 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) edit: threejs-buffer-geometry - link to new threejs-buffer-geometry-morph-attributes
 * (done) forpost: threejs-buffer-geometry - start section folders for morph attributes with at least a basic example
 * (done) edit: threejs-buffer-geometry - write about new morph attribute example
-
-* () edit: threejs-examples-lerp-geo - write about new r1 and demo of r1
-* () edit: threejs-examples-lerp-geo - proof read opening and getting started
-
-
+* (done) edit: threejs-examples-lerp-geo - write about new r1 and demo of r1
+* (done) edit: threejs-examples-lerp-geo - proof read opening and getting started
 
 * () videoground-beta-world: timer-train - start detail skin of landscape DAE file
 
