--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -23,9 +23,9 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () edit: threejs-examples-weird-face-one - proof read
 * () edit: threejs-examples-weird-face-one - update code to 146 style
 
+* () videoground-beta-world: timer-train - start detail skin of landscape DAE file
 * () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
 * () videoground-beta-world: timer-train - add more objects from landscape DAE file into video5-angles.js
-* () videoground-beta-world: timer-train - finish adjusting paths
 
 * () build and publish
 
@@ -38,9 +38,8 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) edit: threejs-buffer-geometry - write about new morph attribute example
 * (done) edit: threejs-examples-lerp-geo - write about new r1 and demo of r1
 * (done) edit: threejs-examples-lerp-geo - proof read opening and getting started
-
 * (done) videoground-beta-world: timer-train - started adjusting paths
-* () videoground-beta-world: timer-train - start detail skin of landscape DAE file
+* (done) videoground-beta-world: timer-train - finish adjusting paths
 
 ### () - SUN 02/05/2023
 * (done) videoground-beta-world: finish ties in tunnel
