--- a/todo/today/todo_2023_02.md
+++ b/todo/today/todo_2023_02.md
@@ -20,8 +20,10 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - WED 02/08/2023
 
 ### () - TUE 02/07/2023
+* () forpost: threejs-examples-weird-face-one - update code to 146 style
 * () edit: threejs-examples-weird-face-one - proof read
-* () edit: threejs-examples-weird-face-one - update code to 146 style
+
+* () demo: CubicBezierCurve3 r146 demo
 
 * () videoground-beta-world: timer-train - start detail skin of landscape DAE file
 * () videoground-beta-world: timer-train - add at least one new house object for landscape DAE file
